# ImTransistor

./: CMakeCache.txt  CMakeLists.txt  CS11_Project_Writeup.tex  IT_main.cpp  ImTransistor  Makefile  Potential Algorithms.txt  README.md  cmake_install.cmake  displayOriginal  displayOriginal.cpp
Sample Output/: different types.mov  faces.mov  flower.mov  flower2.mov
